--- a/BeiderMorse.Test/BeiderMorse.Test.csproj
+++ b/BeiderMorse.Test/BeiderMorse.Test.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EncodeTest.cs" />
+    <Compile Include="EncodeTestGenericExact.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
