New test for Lang file

--- a/BeiderMorse.Test/BeiderMorse.Test.csproj
+++ b/BeiderMorse.Test/BeiderMorse.Test.csproj
@@ -95,6 +95,7 @@
     <Compile Include="EncodeTestGenericAproxFullname.cs" />
     <Compile Include="EncodeTestGenericExact.cs" />
     <Compile Include="EncodeTestGenericExactFullName.cs" />
+    <Compile Include="LangTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
